Дипломный проект - этап 2 (настройка сервисов 11)